# rd_vio

./: .gitignore  CMakeLists.txt  README.md
configs/: realsense_d455_sensor.yaml  realsense_sensor.yaml
examples/: CMakeLists.txt  config_realsense.yaml  fast_tracking.yaml  pviz.hpp  realsense_d455.cpp  realsense_sensor_gen.py  showleftcam.cpp  slime.cpp  test_euroc.cpp  test_realsense.cpp
src/rdvio/include/rdvio/: feature_tracker.h
src/rdvio_estimation/include/rdvio/estimation/ceres/: quaternion_parameterization.h
src/rdvio_estimation/src/: solver.cpp
src/rdvio_geometry/src/: essential.cpp
src/rdvio_map/include/rdvio/map/: track.h
